# world-most-interesting-contact-form

./: Cargo.toml  Dockerfile  README.md  axum-backend.env  docker-compose.yml  traefik-axum.yml  traefik-crowdsec.env  traefik-install.yml
src/: main.rs  routes.rs  structs.rs  utils.rs
