[package]
name = "axum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
env_logger = "0.11.8"
lettre = "0.11.19"
log = "0.4.28"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
